@@ -66,7 +66,6 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.15.4</version>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -79,21 +78,9 @@
             </plugin>
 
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.6.3</version>
-                <configuration>
-                    <mainClass>bigdatameteo.Main</mainClass>
-                    <arguments>
-                        <argument>output/parquet</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>3.2.5</version>
                 <configuration>
                     <argLine>
                         --add-opens java.base/sun.util.calendar=ALL-UNNAMED
@@ -105,6 +92,28 @@
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                     </argLine>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.6.3</version>
+                <configuration>
+                    <mainClass>bigdatameteo.Main</mainClass>
+                    <jvmArgs>
+                        <jvmArg>--add-opens</jvmArg>
+                        <jvmArg>java.base/sun.nio.ch=ALL-UNNAMED</jvmArg>
+                        <jvmArg>--add-opens</jvmArg>
+                        <jvmArg>java.base/sun.util.calendar=ALL-UNNAMED</jvmArg>
+                        <jvmArg>--add-opens</jvmArg>
+                        <jvmArg>java.base/java.lang=ALL-UNNAMED</jvmArg>
+                        <jvmArg>--add-opens</jvmArg>
+                        <jvmArg>java.base/java.nio=ALL-UNNAMED</jvmArg>
+                    </jvmArgs>
+                    <arguments>
+                        <argument>output/parquet</argument>
+                    </arguments>
                 </configuration>
             </plugin>
 
